--- a/src/_globalColor.scss
+++ b/src/_globalColor.scss
@@ -3,8 +3,8 @@ Certain colors are used for different and multiply types of elements.
 For greater control over colors visit each components .scss file. */
 
 // button colors
-$buttonColor: #55198b;
-$buttonHover: #8c43ce;
+$buttonColor: #fc7405;
+$buttonHover: #ce8d44;
 $topButtonHover: #000;
 
 // text colors light theme
@@ -19,7 +19,7 @@ $blogCardTitleColor: #262626;
 $textColorDark: #ffffff;
 
 // toggle switch colors
-$toggleCheck: #2196f3;
+$toggleCheck: #94f221;
 $toggleSwitchSliderBG: #ccc;
 
 // githubRepo specific colors
@@ -34,9 +34,9 @@ $githubProfileCardBorder: #6c63ff;
 $lightBackground1: #fff;
 $lightBackground2: rgb(255, 255, 255);
 $lightBackground3: #f5f2f4;
-$blogCardContainerColor: #586069;
+$blogCardContainerColor: #5f6857;
 // dark background colors
-$darkBackground: #171c28;
+$darkBackground: #1c2817;
 
 // light theme box shadows
 $lightBoxShadowDark: rgba(0, 0, 0, 0.2);
@@ -74,8 +74,8 @@ $iconBackground: #333;
 $appHeaderBG: #282c34;
 
 // misc colors
-$skillsColor: #645beb;
-$appLink: #09d3ac;
+$skillsColor: #ea655b;
+$appLink: #d3ab08;
 
 // social media icons
 $faceBook: #3b5998;
