--- a/src/_globalColor.scss
+++ b/src/_globalColor.scss
@@ -36,7 +36,7 @@ $lightBackground2: rgb(255, 255, 255);
 $lightBackground3: #f5f2f4;
 $blogCardContainerColor: #5f6857;
 // dark background colors
-$darkBackground: #1c2817;
+$darkBackground: #1c1c1c;
 
 // light theme box shadows
 $lightBoxShadowDark: rgba(0, 0, 0, 0.2);
@@ -60,7 +60,7 @@ $experienceCardBannerLG: linear-gradient(
 // borders
 $progressBarBackground: rgb(243, 239, 239);
 $lightBorder1: rgba(211, 211, 211, 0.397);
-$educationCardBorder: #a9a7f9;
+$educationCardBorder: #f9d2a7;
 
 // hovers
 $achievementCertificateCardHoverDark: rgba(255, 255, 255, 0.2);
@@ -69,12 +69,12 @@ $headerHoverBG: #f4f4f4;
 $contactDetailHoverTS: #b5b5b5;
 
 // misc backgrounds
-$progressBarSpanBG: #aaa5ff;
+$progressBarSpanBG: #ffd6a5;
 $iconBackground: #333;
-$appHeaderBG: #282c34;
+$appHeaderBG: #332d27;
 
 // misc colors
-$skillsColor: #ea655b;
+$skillsColor: #eaac5b;
 $appLink: #d3ab08;
 
 // social media icons
