--- a/src/index.css
+++ b/src/index.css
@@ -1,29 +1,3 @@
-/* Ensure html and body cover the entire viewport */
-html, body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  overflow-x: hidden; /* Prevent horizontal scroll */
-  background-color: #fc7405 !important; /* Orange background behind the content */
-}
-
-/* Set the background color for the main content */
-body {
-  background-color: #ffffff !important; /* Set the main page background color */
-}
-
-/* Specific element styles if needed */
-.header, .footer, .main-content {
-  background-color: transparent !important; /* Override any specific background colors */
-}
-
-/* Reset or ensure no other styles override */
-* {
-  background-color: transparent !important;
-}
-
-/* Font-face and existing styles */
 @font-face {
   font-family: "Agustina Regular";
   font-style: normal;
@@ -32,27 +6,30 @@ body {
     url("./assets/fonts/Agustina.woff") format("woff");
   font-display: swap;
 }
-
 @font-face {
   font-family: "Montserrat";
   src: local("Montserrat"),
     url("./assets/fonts/Montserrat-Regular.ttf") format("woff");
   font-display: swap;
 }
-
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
-
+html,
 body {
+  scroll-behavior: smooth;
+}
+body {
+  margin: 0;
   font: 19px / 23px Montserrat, "Montserrat", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 /* Media Query */
 @media (max-width: 1380px) {
-  html, body {
+  html,
+  body {
     font-size: rem;
     line-height: normal;
   }
