--- a/src/containers/contact/Contact.scss
+++ b/src/containers/contact/Contact.scss
@@ -2,7 +2,8 @@
 
 .contact-div-main {
   display: flex;
-  flex-direction: column;
+  flex-direction: row; /* Align items horizontally */
+  justify-content: space-between; /* Space between contact info and image */
   align-items: center;
 }
 
@@ -17,7 +18,6 @@
 .contact-title {
   font-size: 65px;
   font-weight: 400;
-  text-align: center;
 }
 
 .contact-detail,
@@ -38,12 +38,10 @@
 
 .contact-subtitle {
   text-transform: uppercase;
-  text-align: center;
 }
 
 .contact-text-div {
   margin-top: 1.5rem;
-  text-align: center;
 }
 
 .contact-margin-top {
@@ -53,23 +51,28 @@
 /* Styling for circular image */
 .profile-image {
   width: 150px; /* Adjust size as needed */
-  height: 150px; /* Adjust size as needed */
+  height: 150px;
   border-radius: 50%; /* Makes the image circular */
   border: 5px solid #fff; /* Optional: Adds a white border */
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2); /* Optional: Adds shadow */
   object-fit: cover; /* Ensures the image fits within the circle */
-  margin-top: 2rem; /* Adjust margin as needed */
 }
 
 /* Styling for image container */
 .contact-image-div {
   display: flex;
-  justify-content: center;
-  margin-top: 2rem; /* Adjust as needed */
+  justify-content: flex-end; /* Align image to the right */
+  align-items: center;
+  padding-left: 2rem;
 }
 
 /* Media Query */
 @media (max-width: 1380px), (max-width: 768px) {
+  .contact-div-main {
+    flex-direction: column; /* Stack contact info and image vertically on smaller screens */
+    align-items: center;
+  }
+
   .contact-title {
     font-size: 56px;
     font-weight: 400;
@@ -78,26 +81,4 @@
 
   .contact-subtitle {
     font-size: 16px;
-    line-height: normal;
-    text-align: center;
-  }
-
-  .contact-text-div {
-    text-align: center;
-    margin-top: 1.5rem;
-  }
-
-  .contact-detail,
-  .contact-detail-email {
-    font-size: 20px;
-  }
-
-  .contact-image-div {
-    margin-top: 1rem; /* Adjust margin for smaller screens */
-  }
-
-  .profile-image {
-    width: 100px; /* Adjust size for smaller screens */
-    height: 100px;
-  }
-}
+   ​⬤
