--- a/src/_globalColor.scss
+++ b/src/_globalColor.scss
@@ -87,7 +87,7 @@ $twitter: #1da1f2;
 $medium: #000;
 $stackoverflow: #f48024;
 $instagram: #c13584;
-$kaggle: #20beff;
+$kaggle: #fc0000;
 
 .bottom-circle {
   position: fixed;
